--- a/notebook/notebook_v2.ipynb
+++ b/notebook/notebook_v2.ipynb
@@ -515,7 +515,7 @@
    "id": "b7bec057-1996-4507-9883-8c2e3ef67397",
    "metadata": {},
    "source": [
-    "## Remove ID and user_timezone column. Id doesnt add any value. User Timezone has many missing values"
+    "## Remove ID and user_timezone column. Id doesnt add any value. User Timezone has many missing values. Airline_sentiment is dropped as it has been encoded as Sentiment"
    ]
   },
   {
@@ -525,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop([\"Id\", \"user_timezone\"],axis = 1)\n",
+    "df = df.drop([\"Id\", \"user_timezone\", \"airline_sentiment\"],axis = 1)\n",
     "\n",
     "#df_test = df_test.drop([\"Id\", \"user_timezone\"],axis = 1)"
    ]
@@ -3757,7 +3757,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
+   "id": "f3b3b91c-d918-4fe9-b475-abbe25e5ed95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_model_scores.loc[len(df_model_scores)]=[\"Complimentary Naive Bayes\",best_cnb,best_cnb_params,'NA',0.83,0.79,0.84]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
    "id": "8b083e63-3597-4107-8b6a-c90cf90f06fd",
    "metadata": {},
    "outputs": [
@@ -3782,81 +3792,112 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Model_name</th>\n",
-       "      <th>model</th>\n",
-       "      <th>model_parameters</th>\n",
-       "      <th>decision_threshold</th>\n",
-       "      <th>Precision</th>\n",
-       "      <th>Recall</th>\n",
-       "      <th>F1 Score</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>Model_name</th>\n",
        "      <td>LogisticRegression</td>\n",
-       "      <td>LogisticRegression(C=10, class_weight='balance...</td>\n",
-       "      <td>{'C': 10, 'penalty': 'l2'}</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.765586</td>\n",
-       "      <td>0.86236</td>\n",
-       "      <td>0.822259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>LinearSVC</td>\n",
-       "      <td>LinearSVC(C=0.1, class_weight='balanced', rand...</td>\n",
-       "      <td>{'C': 0.1, 'class_weight': 'balanced'}</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>0.820000</td>\n",
-       "      <td>0.86000</td>\n",
-       "      <td>0.851909</td>\n",
+       "      <td>Complimentary Naive Bayes</td>\n",
+       "      <td>Complimentary Naive Bayes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Complimentary Naive Bayes</td>\n",
+       "      <th>model</th>\n",
+       "      <td>LogisticRegression(C=10, class_weight='balance...</td>\n",
+       "      <td>LinearSVC(C=0.1, class_weight='balanced', rand...</td>\n",
        "      <td>ComplementNB(alpha=np.float64(0.1))</td>\n",
+       "      <td>ComplementNB(alpha=np.float64(0.1))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model_parameters</th>\n",
+       "      <td>{'C': 10, 'penalty': 'l2'}</td>\n",
+       "      <td>{'C': 0.1, 'class_weight': 'balanced'}</td>\n",
        "      <td>{'alpha': 0.1}</td>\n",
+       "      <td>{'alpha': 0.1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>decision_threshold</th>\n",
+       "      <td>0.45</td>\n",
        "      <td>NA</td>\n",
-       "      <td>0.830000</td>\n",
-       "      <td>0.79000</td>\n",
-       "      <td>0.840000</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Precision</th>\n",
+       "      <td>0.765586</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Recall</th>\n",
+       "      <td>0.86236</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F1 Score</th>\n",
+       "      <td>0.822259</td>\n",
+       "      <td>0.851909</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.84</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Model_name  \\\n",
-       "0         LogisticRegression   \n",
-       "1                  LinearSVC   \n",
-       "2  Complimentary Naive Bayes   \n",
+       "                                                                    0  \\\n",
+       "Model_name                                         LogisticRegression   \n",
+       "model               LogisticRegression(C=10, class_weight='balance...   \n",
+       "model_parameters                           {'C': 10, 'penalty': 'l2'}   \n",
+       "decision_threshold                                               0.45   \n",
+       "Precision                                                    0.765586   \n",
+       "Recall                                                        0.86236   \n",
+       "F1 Score                                                     0.822259   \n",
        "\n",
-       "                                               model  \\\n",
-       "0  LogisticRegression(C=10, class_weight='balance...   \n",
-       "1  LinearSVC(C=0.1, class_weight='balanced', rand...   \n",
-       "2                ComplementNB(alpha=np.float64(0.1))   \n",
+       "                                                                    1  \\\n",
+       "Model_name                                                  LinearSVC   \n",
+       "model               LinearSVC(C=0.1, class_weight='balanced', rand...   \n",
+       "model_parameters               {'C': 0.1, 'class_weight': 'balanced'}   \n",
+       "decision_threshold                                                 NA   \n",
+       "Precision                                                        0.82   \n",
+       "Recall                                                           0.86   \n",
+       "F1 Score                                                     0.851909   \n",
        "\n",
-       "                         model_parameters decision_threshold  Precision  \\\n",
-       "0              {'C': 10, 'penalty': 'l2'}               0.45   0.765586   \n",
-       "1  {'C': 0.1, 'class_weight': 'balanced'}                 NA   0.820000   \n",
-       "2                          {'alpha': 0.1}                 NA   0.830000   \n",
+       "                                                      2  \\\n",
+       "Model_name                    Complimentary Naive Bayes   \n",
+       "model               ComplementNB(alpha=np.float64(0.1))   \n",
+       "model_parameters                         {'alpha': 0.1}   \n",
+       "decision_threshold                                   NA   \n",
+       "Precision                                          0.83   \n",
+       "Recall                                             0.79   \n",
+       "F1 Score                                           0.84   \n",
        "\n",
-       "    Recall  F1 Score  \n",
-       "0  0.86236  0.822259  \n",
-       "1  0.86000  0.851909  \n",
-       "2  0.79000  0.840000  "
+       "                                                      3  \n",
+       "Model_name                    Complimentary Naive Bayes  \n",
+       "model               ComplementNB(alpha=np.float64(0.1))  \n",
+       "model_parameters                         {'alpha': 0.1}  \n",
+       "decision_threshold                                   NA  \n",
+       "Precision                                          0.83  \n",
+       "Recall                                             0.79  \n",
+       "F1 Score                                           0.84  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_model_scores.loc[len(df_model_scores)]=[\"Complimentary Naive Bayes\",best_cnb,best_cnb_params,'NA',0.83,0.79,0.84]\n",
     "\n",
-    "df_model_scores"
+    "df_model_scores.T"
    ]
   },
   {
