--- a/readme.ipynb
+++ b/readme.ipynb
@@ -589,7 +589,37 @@
     "Once started, the API will be available at:\n",
     "- **Local URL** → `http://localhost:8000/docs/`\n",
     "- **Swagger UI** → `http://localhost:8000/docs/`\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "### Local Deployment Images\n",
+    "#### API Testing Examples\n",
+    "\n",
+    "#### 1. Transaction (POST /predict)\n",
+    "\n",
+    "##### Request\n",
+    "\n",
+    "![API request](images/cloud_deployment/airlinetweetprediction_request.png)\n",
+    "\n",
+    "```json\n",
+    "\n",
+    "{\n",
+    "  \"text\": \"Terrible experience\",\n",
+    "  \"airline\": \"american\",\n",
+    "  \"retweet_count\": 15\n",
+    "}\n",
+    "\n",
+    "```\n",
+    "\n",
+    "##### Response:\n",
+    "\n",
+    "![API request](images/cloud_deployment/airlinetweetprediction_response.png)\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "  \"sentiment\": 0,\n",
+    "  \"tweet\": \"Negative Tweet\"\n",
+    "}\n",
+    "```\n"
    ]
   },
   {
@@ -650,9 +680,10 @@
     "##  Proof of Successful Deployment\n",
     "\n",
     "### Render Deployment Configuration\n",
-    "![Deployment video Predict api](images/Cloud_Deployment/LoanPredictionAPI_Render.mp4)\n",
-    "![Deployment video HTML UI](images/Cloud_Deployment/LoanPredictionHTML_Render.mp4)             \n",
-    "![Deployment Pic](images/Cloud_Deployment/LoanPrediction_mainRender.png)\n",
+    "[Deployment Video – Predict API](images/cloud_deployment/AirlineTweetSentimentPrediction_RenderVideo.mp4)   \n",
+    "### Render URL: https://sentimentanalysis-airlines.onrender.com\n",
+    "\n",
+    "![Deployment Pic](images/cloud_deployment/airlinetweetsentimentanalysis_mainRender.png)\n",
     "\n",
     "\n",
     "### API Testing Examples\n",
@@ -661,40 +692,50 @@
     "\n",
     "##### Request\n",
     "\n",
-    "![API request](images/Cloud_Deployment/loanpredict_request.png)\n",
+    "![API request](images/cloud_deployment/airlinetweetprediction_renderrequest.png)\n",
     "\n",
     "```json\n",
     "\n",
     "{\n",
-    "  \"employment_status\": \"employed\",\n",
-    "  \"education_level\": \"bachelors\",\n",
-    "  \"grade_subgrade\": \"a1\",\n",
-    "  \"loan_purpose\": \"business\",\n",
-    "  \"credit_score\": 650,\n",
-    "  \"annual_income\": 120000,\n",
-    "  \"debt_to_income_ratio\": 0.4,\n",
-    "  \"loan_amount\": 40000,\n",
-    "  \"interest_rate\": 13\n",
+    "  \"text\": \"@AmericanAir you Cancelled Flight both flights yesterday and rebook me in middle seat. Not acceptable. Upgrade to emergency row would help. #nothappy\",\n",
+    "  \"airline\": \"american\",\n",
+    "  \"retweet_count\": 10\n",
     "}\n",
-    "\n",
     "```\n",
     "\n",
     "##### Response:\n",
     "\n",
-    "![API request](images/Cloud_Deployment/loanpredict_response.png)\n",
+    "![API request](images/cloud_deployment/airlinetweetsentimentanalysis_RenderResponse.png)\n",
     "\n",
     "```json\n",
     "{\n",
-    "  \"loan_paid_back_probability\": 0.3745,\n",
-    "  \"loan_paid_back\": \"Loan will not be paid back\"\n",
+    "  \"sentiment\": 0,\n",
+    "  \"tweet\": \"Negative Tweet\"\n",
     "}\n",
     "```"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19584623-1465-4e64-8c88-64d34f8d4d83",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "This project successfully implements an end-to-end Airline Tweet Sentiment Prediction system for Twitter tweets using machine learning. After performing detailed exploratory data analysis, feature engineering, and model comparison, LinearSVC was selected as the final model due to its high performance:\n",
+    "\n",
+    "F1-Score: 0.943001\n",
+    "\n",
+    "Precision: 0.45\n",
+    "\n",
+    "Recall: \n",
+    "The final solution was packaged with FastAPI, containerized using Docker, and deployed on Render, enabling real-time prediction of tweets. The system is ready for integration into production environments to help Airliners to improve their services after reading negative tweets. Flight carriers can engage with customer based on their tweet and ask for constructive feedback"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19584623-1465-4e64-8c88-64d34f8d4d83",
+   "id": "b54c9665-b8be-423a-a3d1-19d4cefb15bc",
    "metadata": {},
    "outputs": [],
    "source": []
