--- a/readme.ipynb
+++ b/readme.ipynb
@@ -60,9 +60,9 @@
    "source": [
     "## How the Solution Is Used\n",
     "\n",
-    "### 1. Transaction Prediction \n",
+    "### 1. Tweet Prediction \n",
     "\n",
-    "When a transaction is processed, its details are sent to the `/predict` endpoint. The API responds with sentiment labels and classification. \n",
+    "When a tweet is posted, its details are sent to the `/predict` endpoint. The API responds with sentiment labels and classification. \n",
     "\n",
     "#### Example request:\n",
     "```json\n",
@@ -96,8 +96,8 @@
     "\n",
     "| Prediction                      | Recommended Action       |\n",
     "|---------------------------------|--------------------------|\n",
-    "| Negative Tweet                 | Take action for improvement/apology\n",
-    "| Positive Tweet                 | Thank customer                      "
+    "| Negative Tweet                 | Take action for improvement/issue an apology\n",
+    "| Positive Tweet                 | Thank the customer                      "
    ]
   },
   {
@@ -202,7 +202,7 @@
     "- We used Text feature to derive several numeric features like text_length, neg_word_count so that model learns characteristic features of negative and positive tweets\n",
     "- Prevents **data leakage** by excluding unique identifiers\n",
     "- Dropped columns like airline and user_timezone so that model can be built on important features.\n",
-    "- Converted Target Variable airline_sentiment into numneric binary feature sentiment\n"
+    "- Converted Target Variable airline_sentiment into numeric binary feature sentiment\n"
    ]
   },
   {
@@ -215,7 +215,7 @@
     "Due to limited features, we did EDA after feature engineering as follows:-\n",
     "\n",
     "\n",
-    "#### 1. Average Text Count by Sentiment\n",
+    "#### 1. Average Text Length by Sentiment\n",
     "**Image in repository at:** `images/Average Text Length (characters) by Sentiment.png`\n",
     "\n",
     "![Average Text Length](<images/Average Text Length (characters) by Sentiment.png>)\n",
@@ -337,6 +337,18 @@
     "\n",
     "* Highest F1 Score on validation  \n",
     "* Best overall Recall and Precision\n",
+    "\n",
+    "### Final Model Evaluation (on Test Set)\n",
+    "\n",
+    "After selecting LinearSVC, the model was retrained using full train + testing datasets, and final evaluation was performed on the test set.\n",
+    "\n",
+    "| Metric | Value |\n",
+    "|--------|-------|\n",
+    "| F1 weighted | 0.87 |\n",
+    "| Precision Positive Class | 0.86 |\n",
+    "| Precision Negative Class | 0.87 |\n",
+    "| Recall Positive Class | 0.84 |\n",
+    "| Recall Negative Class | 0.89 |\n",
     "\n",
     "### Pipeline Integration\n",
     "The transformer is used as part of the final ML pipeline:\n",
@@ -686,9 +698,9 @@
     "![Deployment Pic](images/cloud_deployment/airlinetweetsentimentanalysis_mainRender.png)\n",
     "\n",
     "\n",
-    "### API Testing Examples\n",
+    "### API Testing Examples on Render\n",
     "\n",
-    "#### 1. Single Transaction (POST /predict)\n",
+    "#### 1. Single Tweet (POST /predict)\n",
     "\n",
     "##### Request\n",
     "\n",
@@ -724,11 +736,13 @@
     "\n",
     "This project successfully implements an end-to-end Airline Tweet Sentiment Prediction system for Twitter tweets using machine learning. After performing detailed exploratory data analysis, feature engineering, and model comparison, LinearSVC was selected as the final model due to its high performance:\n",
     "\n",
-    "F1-Score: 0.943001\n",
+    "F1-Score: 0.87\n",
     "\n",
-    "Precision: 0.45\n",
+    "Precision: 0.86 (positive class) 0.87 (negative class)\n",
     "\n",
-    "Recall: \n",
+    "Recall: 0.84 (positive class)  ,0.89 (negative class)\n",
+    "\n",
+    "\n",
     "The final solution was packaged with FastAPI, containerized using Docker, and deployed on Render, enabling real-time prediction of tweets. The system is ready for integration into production environments to help Airliners to improve their services after reading negative tweets. Flight carriers can engage with customer based on their tweet and ask for constructive feedback"
    ]
   },
